fix: scrollbar none mobile

--- a/style/style.css
+++ b/style/style.css
@@ -34,7 +34,6 @@ body{
     font-family:'Segoe UI',sans-serif;
     background:var(--gray);
     color:var(--gray-dark);
-    overflow-x:hidden;
 }
 
 /* ==========================
@@ -625,6 +624,7 @@ footer{
     position: relative;
     transition: background-color 0.3s ease;
     background-color: transparent;
+    
 }
 
 /* Scroll Content */
@@ -1147,4 +1147,8 @@ footer{
     .stat-card h3{
         font-size:2rem;
     }
+}
+/* Largura da barra de rolagem */
+::-webkit-scrollbar {
+width: 0px;
 }
